<resources>
    <string name="current_version">Wersja aplikacji: <b>1.4.53</b></string>
    <string name="app_name">Sekrety bydgoskiej historii</string>
    <string name="nav_header_title">Sekrety bydgoskiej historii</string>
    <string name="nav_header_subtitle">100 lat Bydgoszczy w Polsce </string>
    <string name="nav_header2_subtitle">Wyzwolenie Bydgoszczy 1945 r. </string>
    <string name="nav_header3_subtitle">Marian Rejewski</string>
    <string name="channel_bydgoszcz1920_name">BYDGOSZCZ1920_CHANNEL</string>
    <string name="channel_bydgoszcz1920_description">Sekrety Bydgoskiej Historii</string>
    <string name="channel_bydgoszcz1945_name">BYDGOSZCZ1945_CHANNEL</string>
    <string name="channel_bydgoszcz1945_description">Sekrety Bydgoskiej Historii</string>
    <string name="channel_rejewski_name">REJEWSKI_CHANNEL</string>
    <string name="channel_rejewski_description">Sekrety Bydgoskiej Historii</string>
    <string name="nav_header_desc">Herb Bydgoszczy</string>
    <string name="action_czy_wiesz_ze">Czy wiesz, że..</string>
    <string name="przydatne_separator">Przydatne</string>
    <string name="menu_home">Zamiast wstępu</string>
    <string name="menu_gallery">Media</string>
    <string name="menu_ciekawostki">Ciekawostki</string>
    <string name="menu_muzea">Odwiedź koniecznie</string>
    <string name="menu_author">Zespół autorski</string>
    <string name="photo_1">Fotografia 1</string>
    <string name="photo_2">Fotografia 2</string>
    <string name="photo_3">Fotografia 3</string>
    <string name="photo_4">Fotografia 4</string>
    <string name="photo_5">Fotografia 5</string>
    <string name="photo_6">Fotografia 6</string>
    <string name="photo_7">Fotografia 7</string>
    <string name="film_1">Filmy</string>
    <string name="muzyka_1">Muzyka</string>
    <string name="web_1">Strony www</string>
    <string name="herb">Herb Bydgoszczy</string>
    <string name="ciekawostka_1">2 sierpnia 1914r. w Bydgoszczy ogłoszono stan wojenny. Na lazarety zamieniono większość dużych obiektów w mieście, takich jak choćby sale gimnastyczne. Miesiąc od rozpoczęcia wojny w mieście istniało 10 lazaretów. Do końca 1914r. ten stan powiększono o 100 %, w których to lazaretach leczono jednocześnie nawet 3000 rannych żołnierzy.</string>
    <string name="ciekawostka_2">Przygotowania do powitania Wojska Polskiego w Bydgoszczy  trwały już od lipca 1919 roku. Prace dekoracyjne w mieście zlecono bydgoskiemu architektowi Teofilowi Biernackiemu.</string>
    <string name="ciekawostka_3">Przed 1 kwietnia 1920 miasto składało się z pięciu zasadniczych części:
        \n - <b>Stare Miasto:</b> Miasto, Zamek, Wyspa Młyńska (dawniej Okole), Przedmieście Kujawskie;
        \n - <b>Część północna:</b> Ludwikowo (Jachcice), Stacja kolejowa, Bocianowo I (Wielkie), Bocianowo II (Małe), Przedmieście Gdańskie, Grodztwo Zachodnie, Grodztwo Wschodnie, Cmentarze północne, Koszary północne, Koszary leśne, Szkoła wojenna, Boisko sportowe;
        \n - <b>Część zachodnia:</b> Okole (dzisiejsze), Koszary ułańskie, Przedmieście Poznańskie;
        \n - <b>Część południowa:</b> Szwederowo, Nowy Dwór, Bielice;
        \n - <b>Część wschodnia:</b> Przedmieście Toruńskie, Probostwo, Wzgórze Wolności, Żupy.
\n \nRejony o największej powierzchni to: Grodztwo Wschodnie – 145 ha,  Ludwikowo – 63,5 ha, Bocianowo I (Wielkie) – 60 ha.</string>
    <string name="ciekawostka_4">Nocą z 10 na 11 listopada 1918r. w mieście doszło do starcia grupki niemieckich żołnierzy z patrolem Rady Żołnierskiej. Incydent zakończył się kilkoma ofiarami śmiertelnymi i kilkoma rannymi. Bunt wśród jednostek bydgoskiego garnizonu rozgorzał najpierw w 14 Pułku Piechoty im. Hrabiego von Schwerin (3 Pomorski).</string>
    <string name="ciekawostka_4a">Naczelna Rada Ludowa na miasto Bydgoszcz została powołana 16 listopada 1918 roku. Prezesem został wybrany Jan Biziel, sekretarzem Jan Teska, skarbnikiem Józef Milchert, a członkami zarządu Władysław Kużaj i Antoni Czarnecki.</string>
    <string name="ciekawostka_4b">"Od 18 stycznia 1919r. do 21 stycznia 1920 roku trwała Konferencja Pokojowa w Paryżu.
        \n18 lutego 1919r. doszło do potyczki pod Rynarzewem, która zakończyła się zdobyciem niemieckiego pociągu pancernego Panzerzug 22, który następnie został przemianowany na „Danuta”.
        \n20 maja 1919r. do restauracji Sikorskiego znajdującej się przy ul. Gdańskiej wtargnęli członkowie Grenzschutzu i obrzucili granatami znajdujących się we wnętrzu zebranych Polaków.
            \n30 maja 1919r. trzech żołnierzy Grenzschutzu wtargnęło na teren kościoła farnego i obrzucili kamieniami grotę Matki Boskiej z Lourdes.
            \n25 listopada 1919r. podpisano umowę o wycofaniu wojsk z odstąpionych obszarów oraz przekazaniu w ręce polskie zarządu cywilnego nad tymi obszarami.</string>
    <string name="ciekawostka_5">Przygotowania do powitania Wojska Polskiego w Bydgoszczy  trwały już od lipca 1919 roku. Prace dekoracyjne w mieście zlecono bydgoskiemu architektowi Teofilowi Biernackiemu.</string>
    <string name="ciekawostka_6">W nocy z 19 na 20 stycznia 1920r. przemalowano w biało-czerwone barwy wszystkie budki strażnicze stojące przy bramach koszarowych i ważniejszych wojskowych obiektach. Środki na zakup farby pochodziły z licznych zbiórek funduszy, w których hojnie uczestniczyli mieszkańcy Bydgoszczy.</string>
    <string name="ciekawostka_7">W bardzo krótkim czasie Bydgoszcz z typowo pruskiego miasta przerodziła się w pełnoprawną polską metropolię. Jeszcze dziesięć lat wcześniej Bydgoszcz była zamieszkiwana przez 19 % Polaków. Według danych z przełomu 1928/1929 r. Polacy stanowili 92% populacji miasta.</string>
    <string name="ciekawostka_8">Bydgoskie więzienie zostało przejęte przez podprokuratora przy Sądzie Okręgowym Jarosława Czarlińskiego oraz prokuratora krajowego Alfreda Jossè.</string>
    <string name="ciekawostka_9">Z gabinetu przeznaczonego dla Prezydenta usunięto portret Fryderyka II i zawieszono obraz przedstawiający poznański ratusz. Oczywiście uczyniono to z powodu braku portretów polskich przywódców, a nie z uwielbienia do Poznania.</string>
    <string name="ciekawostka_10">20 stycznia 1920 roku w godzinach przedpołudniowych po ponad wiekowej niewoli w granice miasta wkroczyli pierwsi polscy żołnierze. Na Stary Rynek oddział ppłk. Witolda Butlera  wkroczył wraz z 3 szwadronem 2 Pułku Ułanów Wielkopolskich pod dowództwem rtm. Stanisława Zakrzewskiego  punktualnie o godz. 12.00. 22 stycznia 1920r. po uroczystościach na Rynku odbyła się defilada wojsk ulicą Gdańską przed generałem Muśnickim, który stał na placu Wolności (Weltziena) w otoczeniu swego sztabu i licznej świty.</string>
    <string name="ciekawostka_21">W celu obrony Bydgoszczy sformowano zgrupowanie „Gneisenau”. W jego skład weszły stacjonujące w Bydgoszczy Szkoła Zwiadu i Kawalerii Bydgoszcz (Aufklärungs und Kavallerieschule Bromberg), wystawiona jako Alarmowy Pułk Wolffien oraz Szkoła Obrony Gazowej Bydgoszcz 2 (Heeresgasschutzschule 2 Bromberg). Alarmowy Pułk Wolffien w sile ok. 600 żołnierzy składał się z 2 Radfahrschwadron, 1 schwere Schwadron i 1 Offizierbewerber Schwadron (OB Schwadron).</string>
    <string name="ciekawostka_22">Operacja „wiślańsko-odrzańska” jak została nazwana w sztabie Naczelnego Dowództwa Armii Czerwonej rozpoczęła się 12 stycznia 1945 r. Wojska Sowieckie uformowano w dwa fronty, które odpowiadały niemieckim Grupom Armii: 1 Front Białoruski oraz 1 Front Ukraiński. Oba fronty były wspomagane przez polskie jednostki z 1 i 2 Armii Wojska Polskiego. Rosjanie przyjęli prostą taktykę, którą umożliwiała im spora przewaga w sprzęcie i zasobach ludzkich. Silniejsze zgrupowania przeciwnika okrążano prąc dalej na zachód i licząc na ich poddanie się, wynikające z beznadziejnej sytuacji, bądź powolną likwidację w późniejszym terminie.</string>
    <string name="ciekawostka_23">W leżącym po wschodniej stronie miasta nieodległym Fordonie znajdowała się dodatkowo słaba, bo w sile niepełnego batalionu Szkoła Walki 2 Armii (Armeewaffenschule der 2. Armee) pod dowództwem gen. Rudolfa Noacka.</string>
    <string name="mwl_title">Muzeum Wojsk Lądowych</string>
    <string name="mwl_ulica">\nul. Czerkaska 2</string>
    <string name="mwl_miasto">85–641 Bydgoszcz</string>
    <string name="mwl_tel">tel. 261 412 026</string>
    <string name="mo_title">Muzeum Okręgowe im. Leona Wyczółkowskiego w Bydgoszczy\nDział Edukacji i Promocji</string>
    <string name="mo_ulica">\nul. Mennica 6</string>
    <string name="mo_miasto">85–112 Bydgoszcz</string>
    <string name="mo_tel">tel. 525 859 910</string>
    <string name="ipg_title">Izba Pamięci Adama Grzymały–Siedleckiego \nPracownia Teatrologiczna</string>
    <string name="ipg_ulica">\nul. Libelta 5</string>
    <string name="ipg_miasto">85–080 Bydgoszcz</string>
    <string name="ipg_tel">tel. 573 313 566</string>
    <string name="bibl_title">Wojewódzka i Miejska Biblioteka Publiczna im. dr. Witolda Bełzy\n Dział Udostępniania Zbiorów</string>
    <string name="bibl_ulica">\nStary Rynek 22–24</string>
    <string name="bibl_miasto">85–105 Bydgoszcz</string>
    <string name="bibl_tel"> tel. 523 399 250</string>
    <string name="distance">-</string>
    <string name="description_developer_android">\n<b>Sławomir Ciecierski</b> - kierownik projektu, programista Java, kompozytor. Wersja aplikacji na Android. <u>Kod źródłowy aplikacji - link: github.com</u>\n\n </string>
    <string name="description_developer_ios">\n<b>Mateusz Szafraniec</b> - programista aplikacji mobilnych. Wersja aplikacji na iOS.\n\n
    \nZespół testerów w składzie:\n</string>
    <string name="description_tester1">\n1. <b>Konrad Stankiewicz;\n</b></string>
    <string name="description_tester2">\n2. <b>Paweł Cymbaluk;\n</b></string>
    <string name="description_tester3">\n3. <b>Łukasz Kamiński;\n</b></string>
    <string name="description_tester4">\n4. <b>Ewelina Sierżańska;</b></string>
    <string name="description_tester5">\n5. <b>Marcin Hyba;</b> \n\n\n</string>
    <string name="description_author">\n<b>Krzysztof Drozdowski</b> - urodził się 15.03.1985 roku w Bydgoszczy. Historyk, społecznik, działacz na rzecz podniesienia świadomości historycznej w Bydgoszczy i regionie.
        Członek Towarzystwa Miłośników Miasta Bydgoszczy. Doprowadził do wznowienia przez IPN śledztwa w sprawie fordońskiej Doliny Śmierci.\n
        \nJest autorem publikacji:
        \n- <i>Bitwa o Bydgoszcz 1945</i>,
        \n- <i>Bydgoszcz wita Armię</i>,
        \n- <i>Graudenz 1945 – ostatnie tchnienie</i>,
        \n- <i>Bydgoska architektura militarna w latach 1772-1945;</i>
        \n- <i>Z lotu ptaka</i>;
        \n- <i>Bydgoszcz na fotografii lotniczej w latach 1911-1945</i>,
        \n- <i>Tajemnica Doliny Śmierci;</i>
        \n- <i>Droga do prawdy</i>,
        \n- <i>Artylerzysta Piłsudskiego</i>;
        \n- <i>Wspomnienia gen. Jana Chmurowicza</i>,
        \n- <i>Wojenne sekrety Bydgoszczy</i>.\n
        \nJest również współautorem publikacji:
        \n- <i>Bitwa o Bydgoszcz 1945, walki, wspomnienia, relacje</i>;
        \n- <i>16 Pułk Ułanów Wielkopolskich im. gen. dyw. Gustawa Orlicz-Dreszera 1918-1939</i>
        \n- <i>Świat odosobniony. Bydgoska służba penitencjarna w latach 1920-1939.</i>\n
        \nPonadto opublikował ponad 40 artykułów naukowych i popularnonaukowych.\n\n</string>
    <string name="text_home">\n<i>Aplikacja ma za zadanie przybliżyć różne ważne wydarzenia z życia Bydgoszczy, które przez lata popadły w zapomnienie. Piękna historia miasta, nietuzinkowe postaci – przyjrzyj się uważnie tym unikalnym zdjęciom, obejrzyj filmy i posłuchaj muzyki. To wszystko znajdziesz w aplikacji pod nazwą <b>Sekrety Bydgoskiej Historii</b>. Projekt będzie rozwijał się o kolejne sekrety, więc wróć tu koniecznie.
        \n \n  Krzysztof Drozdowski</i></string>
</resources>