<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/twotone_location_city_black_48"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fotografie"
            android:icon="@drawable/twotone_monochrome_photos_black_48"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_ciekawostki"
            android:icon="@drawable/twotone_apps_black_48"
            android:title="@string/menu_ciekawostki" />

    </group>

    <item android:title="@string/przydatne_separator">
        <menu>
            <item
                android:id="@+id/nav_autor"
                android:icon="@drawable/twotone_text_rotation_none_black_48"
                android:title="@string/menu_author" />
            <item
                android:id="@+id/nav_muzea"
                android:icon="@drawable/twotone_museum_black_48"
                android:title="@string/menu_muzea" />
        </menu>
    </item>

</menu>
