<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.muzea.MuzeaFragment">
    <!--1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/photo_1"
            android:soundEffectsEnabled="true"
            android:src="@drawable/ico_herb6"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="@string/mwl_title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/mwl_distance"
            android:text="@string/distance"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mwl_ulica"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mwl_miasto"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mwl_tel"
            android:textSize="16sp" />


        <!--        2-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/photo_1"
            android:soundEffectsEnabled="true"
            android:src="@drawable/ico_herb6"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="@string/mo_title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/mo_distance"
            android:text="@string/distance"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mo_ulica"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mo_miasto"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mo_tel"
            android:textSize="16sp" />

        <!--        3-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/photo_1"
            android:soundEffectsEnabled="true"
            android:src="@drawable/ico_herb6"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="@string/ipg_title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/ipg_distance"
            android:text="@string/distance"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipg_ulica"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipg_miasto"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipg_tel"
            android:textSize="16sp" />

        <!--        4-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/photo_1"
            android:soundEffectsEnabled="true"
            android:src="@drawable/ico_herb6"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/bibl_title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/bibl_distance"
            android:text="@string/distance"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bibl_ulica"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bibl_miasto"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bibl_tel"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>