<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.home.HomeFragment3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="@string/photo_1"
            android:soundEffectsEnabled="true"
            android:src="@drawable/ico_herb6"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:text=" "
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:text="@string/nav_header3_subtitle"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/text_home"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="@string/photo_1"
            android:soundEffectsEnabled="true"
            android:src="@drawable/ico_herb6"
            android:visibility="visible" />



    </LinearLayout>

</androidx.core.widget.NestedScrollView>